fix: `.WizardLayout__stepper` fixed positioning overlapped alerts

--- a/src/scss/WizardLayout.scss
+++ b/src/scss/WizardLayout.scss
@@ -67,9 +67,11 @@
 	}
 
 	.WizardLayout__stepper {
-		position: fixed;
-		top: $var--Layout__header-height;
-		left: prem(16);
+		float: left;
+		position: sticky;
+		top: prem(16);
+		padding-top: prem(8);
+		margin-left: prem(-40);
 		width: prem(24);
 	}
 }
